--- a/app/static/views/home/home.html
+++ b/app/static/views/home/home.html
@@ -6,7 +6,8 @@
 
             <p>
              <span translate="main.like">If you like this Angular-Flask generator, please give us a star at </span>
-             <a href="/#/write">Create Post</a>
+             <a class="btn btn-primary" href="/#/write">Create Post</a>
+             <a class="btn btn-primary" href="/#/upload">Upload Files</a>
             </p>
 
             <table class="table table-hover">
